[metadata]
name = kaskara 
author = Christopher Timperley
author-email = christimperley@googlemail.com
home-page = https://github.com/ChrisTimperley/Kaskara
description = A simple, unified API for various static analysers
description-file = README.rst
license-file = LICENSE
keywords = static analysis, c++, python, source code, program analysis
license = Apache-2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  dockerblade ~= 0.2.1
  requests ~= 2.22.0
  sourcelocation ~= 1.0.2
package_dir =
  =python
packages = find:

[options.packages.find]
where = python

[aliases]
test = pytest

[tool:pytest]
testpaths = test
addopts = -rx -v

[pycodestyle]
ignore = W605,E704
max_line_length = 79

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  pycodestyle
  pytest
commands =
  mypy python
  pycodestyle python

[mypy]
ignore_missing_imports = True

[options.extras_require]
test = pytest
