[metadata]
name = kaskara 
author = Christopher Timperley
author-email = christimperley@googlemail.com
home-page = https://github.com/ChrisTimperley/Kaskara
description = A simple, unified API for various static analysers
description-file = README.rst
license-file = LICENSE
keywords = static analysis, c++, python, source code, program analysis
license = Apache-2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  astor ~= 0.8.1
  asttokens ~= 2.0.3
  attrs ~= 19.3.0
  dockerblade ~= 0.5.1
  loguru ~= 0.4.1
  requests ~= 2.22.0
  sourcelocation ~= 1.0.2
  importlib_resources >= 1.0.2
package_dir =
  =lib
packages = find:

[options.packages.find]
where = lib

[aliases]
test = pytest

[tool:pytest]
testpaths = test
addopts = -rx -v

[pycodestyle]
ignore = W605,E704
max_line_length = 79

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  pycodestyle
  pytest
commands =
  # NOTE nasty hack to prevent tox failing to install deps
  # https://github.com/tox-dev/tox/issues/149
  pip install {toxinidir}
  mypy lib
  pycodestyle lib
  python -c 'import kaskara; kaskara.post_install()'
  pytest

[mypy]
ignore_missing_imports = True

[options.extras_require]
test = pytest
